--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Restaurant_Manager_App</string>
+    <string name="google_client_id">GOOGLE_CLIENT_ID</string>
 </resources>
