--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Restaurant_Manager_App</string>
     <string name="google_client_id">GOOGLE_CLIENT_ID</string>
+    <string name="github_client_id">GITHUB_CLIENT_ID</string>
 </resources>
