--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Restaurant_Manager_App</string>
     <string name="google_client_id">GOOGLE_CLIENT_ID</string>
     <string name="github_client_id">GITHUB_CLIENT_ID</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
