--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Restaurant_Manager_App</string>
+    <string name="app_name">Restaurant Manager</string>
     <string name="google_client_id">GOOGLE_CLIENT_ID</string>
     <string name="github_client_id">GITHUB_CLIENT_ID</string>
     <!-- TODO: Remove or change this placeholder text -->
@@ -31,4 +31,11 @@
     <string name="total_amount">$ %.2f</string>
 
     <string name="table_number">Table %d</string>
+    <string name="login_in">Login In</string>
+    <string name="sign_up">Sign up</string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="dont_have_account">Don\'t have an account?</string>
+    <string name="remember_me">Remember me</string>
+    <string name="welcome">Welcome back</string>
+    <string name="text_sign_in">Sign in to your account to continue</string>
 </resources>
