--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,17 +32,28 @@
 
     <string name="table_number">Table %d</string>
     <string name="login_in">Sign In</string>
-    <string name="sign_up">Sign up</string>
+    <string name="sign_up">Sign Up</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="dont_have_account">Don\'t have an account?</string>
+    <string name="have_account">Have an account?</string>
     <string name="or_sign_in_email">or sign in with email</string>
     <string name="remember_me">Remember me</string>
     <string name="welcome">Welcome back</string>
     <string name="text_sign_in">Sign in to your account to continue</string>
+    <string name="text_sign_up">Sign up to your account to continue</string>
     <string name="r">R</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="name">Name</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="address">Address</string>
     <string name="text_input_email">your.email@example.com</string>
     <string name="text_input_password">Enter your password</string>
+    <string name="text_input_name">Enter your name</string>
+    <string name="text_input_phone">Enter your phone</string>
+    <string name="text_input_address">Enter your address</string>
+    <string name="text_create_layout">Create your account</string>
+    <string name="must_be_least">Must be at least 8 characters</string>
+    <string name="does_not_contain">Does not contain your email address</string>
 
 </resources>
