--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,8 @@
     <string name="satellite_map">Satellite</string>
     <string name="terrain_map">Terrain</string>
     <string name="hybrid_map">Hybrid</string>
+    <string name="manager">MANAGER</string>
+    <string name="employee">EMPLOYEE</string>
+    <string name="admin">ADMIN</string>
+    <string name="all">ALL</string>
 </resources>
