update ui setting admin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,31 @@
     <string name="employee">EMPLOYEE</string>
     <string name="admin">ADMIN</string>
     <string name="all">ALL</string>
+    <string name="settings_icon">Settings Icon</string>
+    <string name="system_settings">System settings</string>
+    <string name="restaurant_icon">Restaurant Icon</string>
+    <string name="restaurant_name">Restaurant Name</string>
+    <string name="contact_email">Contact Email</string>
+    <string name="save_changes">Save Changes</string>
+    <string name="system_setting">System Settings</string>
+    <string name="admin_settings">Admin Settings</string>
+    <string name="send_order_notifications">Send order notifications</string>
+    <string name="send_payment_notifications">Send payment notifications</string>
+    <string name="send_reservation_notifications">Send reservation notifications</string>
+    <string name="allow_table_reservations">Allow table reservations</string>
+    <string name="enable_drak_mode">Enable drak mode</string>
+    <string name="default_reservation_time_minutes">Default reservation time(minutes)</string>
+    <string name="notification_settings">Notification Settings</string>
+    <string name="email_notifications">Email Notifications</string>
+    <string name="push_notifications">Push Notifications</string>
+    <string name="sms_notification">SMS Notification</string>
+    <string name="notification_email">Notification Email</string>
+    <string name="paymentmethod_settings">PaymentMethod Settings</string>
+    <string name="cash_payement">Cash Payement</string>
+    <string name="allow_cash_payment">Allow cash payment</string>
+    <string name="card_payment">Card Payment</string>
+    <string name="allow_card_payment">Allow card payment</string>
+    <string name="online_payment">Online Payment</string>
+    <string name="allow_online_payment">Allow online payment</string>
+    <string name="vat">VAT (%)</string>
 </resources>
